Resolved deprecation wrnings, version 0.4.15